# telegram-sticker-bot

./: .env.sample  .gitignore  Dockerfile  Pipfile  README.md  app.json  database.sql  docker-compose.yml  heroku.yml  makefile  pyproject.toml  requirements.txt  run.py
app/: __init__.py  bot.py  env.py  log.py  sticker.py  store.py  unicode_string.py
tests/: test_sticker.py  test_unicode_string.py
